feat: adjustments to latest versions - wopee.io (4.4.0), pw (1.47.2)

--- a/.env.example
+++ b/.env.example
@@ -1,20 +1,11 @@
 # Mandatory
-WOPEE_API_URL=https://api.wopee.io/
 WOPEE_PROJECT_UUID=
 WOPEE_SCREENSHOT_VALIDATION_ENABLED=true
 
 # API keys shoud be provided via env variable
-# WOPEE_API_KEY=
+WOPEE_API_KEY=
 
-# GH token must be provided via env variable
-# https://github.com/settings/tokens
-# export GITHUB_TOKEN=ghp_secret-key
-# echo $GITHUB_TOKEN
-
-# https://learn.microsoft.com/en-us/windows-server/administration/windows-commands/set_1
-# Windows users:
-# set GITHUB_TOKEN=ghp_secret-key
-# 
+# WOPEE_API_URL=https://api.wopee.io/
 
 # Optional
 # WOPEE_BRANCH_NAME=master
